force-app/main/default/objects/Quotation_Charges__c/Quotation_Charges__c.object-meta.xml
<CustomObject>
    <label>Quotation Charges</label>
    <nameField>
        <displayFormat>QC-{00000}</displayFormat>
        <label>Quotation Charge</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>