force-app/main/default/objects/Quotation_Charges__c/fields/BBMSID__c.field-meta.xml
<CustomField>
    <fullName>BBMSID__c</fullName>
    <externalId>true</externalId>
    <label>BBMSID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>