force-app/main/default/objects/Quotation_Charges__c/fields/Buying_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buying_Rate__c</fullName>
    <label>Buying Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>