force-app/main/default/objects/Quotation_Charges__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Charge Name</label>
    <referenceTo>Additional_Charge__c</referenceTo>
    <relationshipLabel>Quotation Charges</relationshipLabel>
    <relationshipName>Quotation_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>