force-app/main/default/objects/Quotation_Charges__c/fields/Charge_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name_text__c</fullName>
    <label>Charge Name(text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>