force-app/main/default/objects/Quotation_Charges__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Container</fullName>
            </value>
            <value>
                <fullName>Per Shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>