force-app/main/default/objects/Quotation_Charges__c/fields/Charge_Value__c.field-meta.xml
<CustomField>
    <fullName>Charge_Value__c</fullName>
    <label>Charge Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>