force-app/main/default/objects/Quotation_Charges__c/fields/isAdditional_Charge__c.field-meta.xml
<CustomField>
    <fullName>isAdditional_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAdditional Charge</label>
    <type>Checkbox</type>
</CustomField>