force-app/main/default/objects/Quotation_Charges__c/fields/isExWorks__c.field-meta.xml
<CustomField>
    <fullName>isExWorks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExWorks</label>
    <type>Checkbox</type>
</CustomField>