force-app/main/default/objects/Quotation_Charges__c/fields/Quotation_Item__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Item__c</fullName>
    <label>Quotation Item</label>
    <referenceTo>Quotation_Item__c</referenceTo>
    <relationshipLabel>Quotation Charges</relationshipLabel>
    <relationshipName>Quotation_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>